--- a/pset_6.ipynb
+++ b/pset_6.ipynb
@@ -3664,7 +3664,22 @@
       "source": [
         "To do the ensemble, just run the exact same D-MPNN tuned model on 20 separate scripts, so that it uses differnet random splits. Because we are mainly concerned with performance at this point and we have finished tuning, we don't need a validation set. We'll use a 90/10 test train split because we still need to get some understanding if the model works well and to get some generalization by subsampling the data.\n",
         "\n",
-        "The prediction on the Kaggle dataset are then aggregated and averaged to give our ensemble prediction in Kaggle. Our ensemble prediction is one of the best performing one, and one of the one we submitted for final evaluation."
+        "The prediction on the Kaggle dataset are then aggregated and averaged to give our ensemble prediction in Kaggle. Our ensemble prediction is one of the best performing one, and one of the one we submitted for final evaluation.\n",
+        "\n",
+        "The ensemble code is here https://github.com/gohdavid/ml4me/blob/main/scripts/ensemble.py\n",
+        "\n",
+        "The ensemble results are here https://github.com/gohdavid/ml4me/tree/main/ensemble2\n",
+        "\n",
+        "The only change in the ensemble code is this:\n",
+        "\n",
+        "```\n",
+        "split_type=\"random\"\n",
+        "split = (0.9, 0.01, 0.09)\n",
+        "```\n",
+        "\n",
+        "We still need 0.01 for the validation since Chemprop doesn't allow zero validation, and I didn't want to define my own splitting function. It's negligible.\n",
+        "\n",
+        "The other difference is that we're training this 20 times and letting the randomness give differnet models and predictions. This is kind of like bagging (boostrap aggregating)."
       ]
     }
   ],
