--- a/pset_6.ipynb
+++ b/pset_6.ipynb
@@ -12,6 +12,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Kerb: davidgoh\n",
+        "Name in Kaggle: David David\n",
+        "Name: David David\n",
+        "\n",
+        "This Jupyter notebook is quite big and has many sections. I'd recommend reading the accompanying PDF first. We go through unsupervised learning exploration, training several models (D-MPNN, XGBoost, etc.), hyperparameter tuning, cross-validation, masking features, and ensembling."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {},
