--- a/pset_6.ipynb
+++ b/pset_6.ipynb
@@ -19,7 +19,9 @@
         "Name in Kaggle: David David\n",
         "Name: David David\n",
         "\n",
-        "This Jupyter notebook is quite big and has many sections. I'd recommend reading the accompanying PDF first. We go through unsupervised learning exploration, training several models (D-MPNN, XGBoost, etc.), hyperparameter tuning, cross-validation, masking features, and ensembling."
+        "This Jupyter notebook is quite big and has many sections. I'd recommend reading the accompanying PDF first. We go through unsupervised learning exploration, training several models (D-MPNN, XGBoost, etc.), hyperparameter tuning, cross-validation, masking features, and ensembling.\n",
+        "\n",
+        "Report is in gradescope and here: https://github.com/gohdavid/ml4me/blob/main/MLME_HW6_DavidDavid.pdf"
       ]
     },
     {
